# github-action-workflow-samples

./: .gitignore  .snyk  README.md
.github/workflows/: build_and_push_backend_services.yml  build_and_push_c#_backend_service.yml  build_and_push_c#_lib.yml  build_and_push_c#_service.yml  build_and_push_go_backend_service.yml  build_and_push_go_lib.yml  build_and_push_python_backend_service.yml  build_and_push_python_lib.yml  build_and_push_rust_backend_service.yml  build_and_push_rust_lib.yml
backend-services/c#/HelloWorldService/: Dockerfile  Program.cs
backend-services/go/hello-world-service/: Dockerfile
backend-services/rust/hello-world-service/src/: main.rs
include-package-samples/c#/UtilizeCommonLibApp/: Program.cs  UtilizeCommonLibApp.csproj
include-package-samples/go/: README.md
include-package-samples/python/: utilize-common-lib-app.py
include-package-samples/rust/common-lib-sample/: Cargo.toml
include-package-samples/rust/common-lib-sample/src/: main.rs
libraries/c#/src/CommonLib/: CommonLib.csproj
libraries/c#/test/CommonLib.WebDtosTest/: UserRequestDtoTest.cs  UserResponseDtoTest.cs
libraries/go/common-lib/src/: go.mod
libraries/go/common-lib/test/common-lib-domain-models-test/: go.mod  main_test.go
libraries/go/common-lib/test/common-lib-web-dtos-test/: go.mod  main_test.go
libraries/python/common-lib/: setup.py
libraries/rust/common-lib/: Cargo.toml
libraries/rust/common-lib/src/: lib.rs
libraries/rust/common-lib/src/domain/models/: user.rs
libraries/rust/common-lib/src/web/dtos/: user_request_dto.rs  user_response_dto.rs
(+11 files in other folders)
