[package]
name = "common-lib"
version = "0.1.0"
edition = "2021"

[dependencies]
validator = { version = "0.16.1", features = ["derive"] }
uuid = { version = "1.6.1", features = ["v4", "serde"] }
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"